# two-local-neural-conparsers

./: README.md
binary_clas_chn/: CMakeLists.txt  cmake-gpu.sh
binary_clas_chn/bilstm_cky/: BILSTM-CKY-PARSER.cc
binary_clas_chn/parser_utils/: MinMaxHeap.h  bitreelstm.h  corpus.h  eval.h  example.h  id_builder.h  span_parser.h  tree.h  treenode.h
binary_span_clas_chn/: CMakeLists.txt  cmake.sh
binary_span_clas_chn/bilstm_cky/: CMakeLists.txt
binary_span_clas_chn/parser_utils/: all_dict.h  cl-args.h
chn-exp/: eval_ch_dev_file.sh  eval_ch_test_file.sh  test_clas_newlex.sh  train_clas_newlex.sh
scripts/: convert_bin2full_tree.py  get_fmeasure2.py
